# home-proxmox

./: .gitignore  .pre-commit-config.yaml  IMAGE_VERSION_CHECK_REPORT.md  check_image_versions.py  check_image_versions.sh  docker-compose.yaml  glances.conf   reorganize-kindle.sh
.cursor/rules/: upgrade-docker-images.mdc
.github/workflows/: media-server.yml
PairDrop/: docker-compose.yaml
archive/elasticsearch/: docker-compose.yml
archive/headscale/: docker-compose.yaml
base_image/: docker-compose.yaml
dockge/: .env  compose.yaml
elasticsearch/: docker-compose.yml  update copy.sh
headscale/: docker-compose.yaml
media-server/: docker-compose.yaml  glances.conf  update.sh
miflora-mqtt-daemon/: config.ini
model-serving/: Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  google_file.py  main.py  n8n_gemini_workflow.json  n8n_workflow_README.md  pyproject.toml
model-serving/routers/: gemini.py  ivrit.py
model-serving/src/: config.py  main.py  single_instance_metaclass.py
model-serving/src/routers/: gemini.py  ivrit.py
monitor/: docker-compose.yaml  update.sh
netdata/: docker-compose.yaml
next-cloud/: docker-compose.yaml
olama/: docker-compose.yaml
oneuptime/: docker-compose.yml  update.sh
openclaw/: docker-compose.yaml
pkm/: docker-compose.yaml
proxmox/: interfaces  passwd  resolv.conf
recipe management/: docker-compose.yaml
swag/: default.conf  docker-compose.yaml
tools/: docker-compose.yaml
wallabag/: docker-compose.yaml
workflows/: README.md  docker-compose.yaml  update.sh
zabbix/: docker-compose.yaml
(+56 files in other folders)
